add music, img, contact

--- a/style.css
+++ b/style.css
@@ -9,10 +9,21 @@ header {
     background-size: cover;
 }
 
-a {
+.sound {
+    font-size: 70px;
+    float: right;
+    margin-right: 10px;
+    position: relative;
+}
+
+.navi {
     color: white !important;
     cursor: pointer;
     text-decoration: underline !important;
+}
+
+.navi:hover {
+    font-style: italic;
 }
 
 h1 {
@@ -39,18 +50,21 @@ p {
     font-size: x-large;
 }
 
-button {
+.love {
     border: none;
     background: transparent;
-    /* position: -webkit-sticky;
-    position: -moz-sticky;
-    position: sticky;
-    z-index: 10;
-    bottom: 10;
-    right: 70;*/
     float: right;
     position: relative;
     padding: 0;
+}
+
+.love:hover {
+    opacity: 0.8;
+}
+
+.love:active {
+    transition: transform 0.5s ease;
+    transform: scale(1.2);
 }
 
 ul {
@@ -76,6 +90,7 @@ article {
 
 .sub-article {
     font-weight: bold;
+    font-size: 14px;
 }
 
 #exp,
@@ -89,25 +104,9 @@ article {
     margin-bottom: -30px;
 }
 
-a:hover {
-    font-style: italic;
-}
-
 .active {
     text-decoration: underline !important;
     color: black !important;
-}
-
-button img:first-child {
-    cursor: pointer;
-}
-
-#love {
-    height: 50px;
-    display: none;
-    float: right;
-    position: absolute;
-    right: 10px;
 }
 
 @media (max-width: 500px) {
