--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header {
     text-align: center;
-    background: url('https://i.pinimg.com/originals/b5/66/31/b56631b993b56e10701ff022781f88e5.jpg');
+    background: url('image/banner.jpg');
     background-size: cover;
 }
 
